# inputbox

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
.github/workflows/: build.yml
public/: manifest.json
src/: App.tsx  index.css  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: InputBar.css  InputBar.tsx
src/components/__tests__/: InputBar.test.tsx
src/plugins/: registry.ts  types.ts
src/plugins/__tests__/: clipboard.test.ts
src/plugins/clipboard/: index.ts
