[package]
name = "inputbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "inputbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "inputbox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
global-hotkey = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.tauri]
windows = [
  { productName = "InputBox", fileDescription = "Raycast-like launcher" }
]
